--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@ engine: ejs
                     <source srcset="./assets/images/home-section4-1-sm.png" media="(max-width: 768px)">
                     <img src="./assets/images/home-section4-1.png" alt="image" class="sm-height-240">
                 </picture>
-                  <h3 class="roboto fz-48 fw-bold primary ta-c bg-white pt-8 pb-8">DOUBLE A+</h3>
+                  <h3 class="roboto fz-48 fw-bold fs-italic primary ta-c bg-white pt-8 pb-8">DOUBLE A+</h3>
               </a>
           </li>
           <li class="hover-outline sm-width-100">
@@ -81,7 +81,7 @@ engine: ejs
                     <source srcset="./assets/images/home-section4-2-sm.png" media="(max-width: 768px)">
                     <img src="./assets/images/home-section4-2.png" alt="image" class="sm-height-240">
                 </picture>
-                  <h3 class="roboto fz-48 fw-bold primary ta-c bg-white pt-8 pb-8">YOUTH</h3>
+                  <h3 class="roboto fz-48 fw-bold fs-italic primary ta-c bg-white pt-8 pb-8">YOUTH</h3>
               </a>
           </li>
       </ul>
@@ -138,19 +138,19 @@ engine: ejs
       <p class="fz-20 mt-48 sm-mt-24">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
       <form action="">
           <div class="mt-24">
-              <lable for="name" class="form-label">姓名</lable><br>
+              <label for="name" class="form-label">姓名</label>
               <input type="text" name="name" id="name" placeholder="陳小明" required class="form-control mt-8">
           </div>
           <div class="mt-16">
-              <lable for="tel" class="form-label">聯絡電話</lable><br>
+              <label for="tel" class="form-label">聯絡電話</label>
               <input type="tel" name="tel" id="tel" placeholder="0912-345-678" required class="form-control mt-8">
           </div>
           <div class="mt-16">
-              <lable for="email" class="form-label">聯絡電話</lable><br>
+              <label for="email" class="form-label">聯絡電話</label>
               <input type="mail" name="email" id="mail" placeholder="example@email.com" required class="form-control mt-8">
           </div>
           <div class="mt-16">
-              <lable for="feedback" class="form-label">意見反應</lable><br>
+              <label for="feedback" class="form-label">意見反應</label>
               <textarea name="feedback" rows="5" id="feedback" placeholder="請輸入您的意見" required class="form-control mt-8"></textarea>
           </div>
           <div class="mt-16 form-check">
